attempt to fix skills/langauges alignment issues in vertical view

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2899,6 +2899,7 @@ input, select, textarea {
 		display: -ms-flex;
 		display: flex;
 		width: 100%;
+		max-width: 100%;
 		margin: 0 0 -0.75em 0;
 		padding: 0;
 		list-style: none;
